# PyxisEngine

./: .gitignore  .gitmodules  2DGameEngine.sln  2DGameEngine.vcxproj  2DGameEngine.vcxproj.filters  Application.cpp  Application.h  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Camera.h  Fragment_source.glsl  Light.h  Mesh.h  Model.h  Program.cpp  Pyxis.cpp  Pyxis.sln  Pyxis.vcxproj  Pyxis.vcxproj.filters  README.md  Vertex.glsl  Vertex_Outline.glsl  Vertex_source.glsl  Windows-CMake-VS17.bat  compile_commands.json  desktop.ini  main.cpp  premake5.lua  steam_appid.txt  vcpkg.json
Pixel-Game/: CMakeLists.txt  Pixel-Game.vcxproj  Pixel-Game.vcxproj.filters  README.md  imgui.ini
Pixel-Game-Core/: CMakeLists.txt
Pixel-Game-Core/assets/: Player.json
Pixel-Game-Core/assets/data/: CellData.json  CellDataGuide.txt
Pixel-Game-Core/assets/shaders/: Deferred.glsl  DeferredLighting.glsl  ScreenQuad.glsl  SingleColorShader.glsl  Text.glsl  Texture.glsl  Voxel.glsl
Pixel-Game-Core/src/: Chunk.cpp  Chunk.h  ChunkChainBody.h  Element.cpp  Element.h  ElementParticle.cpp  ElementParticle.h  GameLayer.cpp  GameLayer.h  GameNode.cpp  GameNode.h  HostingGameLayer.cpp  HostingGameLayer.h  MultiplayerGameLayer.cpp  MultiplayerGameLayer.h  PixelBody.cpp  PixelBody.h  PixelBody2D.cpp  PixelBody2D.h  PixelGameMessage.h  PixelNetworking.h  PixelRigidBody.cpp  PixelRigidBody.h  SingleplayerGameLayer.cpp  SingleplayerGameLayer.h  VectorHash.h  World.cpp  World.h
Pixel-Game-Server/: CMakeLists.txt  Pixel-Game-Server.vcxproj  Pixel-Game-Server.vcxproj.filters  imgui.ini
Pixel-Game-Server/src/: PixelGameServer.cpp  PixelGameServer.h  PixelGameServerApp.cpp
Pixel-Game-Server/x64/Debug/: Sandbox.ilk  vc143.idb
Pixel-Game-Server/x64/Debug/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
Pixel-Game/assets/Data/: CellData.xml  ElementData.json
Pixel-Game/assets/data/: CellDataGuide.txt
Pixel-Game/src/: Chunk.cpp  Chunk.h  ChunkWorker.cpp  ChunkWorker.h  Element.h  GameLayer.cpp  GameLayer.h  MenuLayer.cpp  MenuLayer.h  PixelGameApp.cpp  PixelRigidBody.cpp  PixelRigidBody.h  World.cpp  World.h
Pixel-Game/src/Data/: ElementData.json
Pixel-Game/src/Panels/: InspectorPanel.h  ProfilingPanel.h  SceneHierarchyPanel.h
Pixel-Game/src/common/: ChunkWorker.cpp  PixelClientInterface.h  PixelRigidBody.cpp  PixelRigidBody.h  VectorHash.h  World.cpp  World.h
Pyxis/: CMakeLists.txt  Pyxis.vcxproj  (+3 more)
Pyxis-Editor/: Pyxis-Editor.vcxproj  Pyxis-Editor.vcxproj.filters  imgui.ini
Pyxis-Game/: CMakeLists.txt  README.md
Pyxis-Game/src/: ExamplePanel.h  GameNode.cpp  GameNode.h  HostedGameNode.cpp  HostedGameNode.h  MenuNode.cpp  MenuNode.h  MultiplayerGameNode.cpp  MultiplayerGameNode.h  Player.h  PyxisGameApp.cpp  SingleplayerGameNode.h  SteamManagerNode.h  UIScreenSpace.h
Pyxis-Game/src/Core/: PixellatedSceneLayer.cpp  PixellatedSceneLayer.h
Pyxis/src/: CMakeLists.txt  Pyxis.h  pxpch.h
Pyxis/src/Platform/Linux/: LinuxInput.cpp  LinuxWindow.cpp  LinuxWindow.h
Pyxis/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFrameBuffer.cpp  OpenGLFrameBuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Pyxis/src/Platform/OpenGL/Shaders/: Vertex.glsl
Pyxis/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Pyxis/src/Pyxis/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
Pyxis/src/Pyxis/Core/: Application.cpp  Application.h  BinaryGreedyMesh.h  Core.h  EntryPoint.h  Input.h  InputCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MathLog.h  OrthographicCameraController.h  Panel.h  PerspectiveCameraController.h  ProfilingPanel.h  Resource.cpp  Resource.h  Serialize.h  Timestep.h  Window.h
Pyxis/src/Pyxis/Events/: ApplicationEvent.h  Event.h  EventSignals.h  KeyEvent.h  MouseEvent.h  Signal.h
Pyxis/src/Pyxis/Game/: Entity.cpp  Entity.h  InspectorPanel.h  Node.cpp  Node.h  Physics2D.cpp  Physics2D.h  PhysicsBody2D.cpp  PhysicsBody2D.h  PhysicsWorld2D.cpp  PhysicsWorld2D.h  Scene.cpp  Scene.h  SceneHierarchyPanel.h  SceneLayer.cpp  SceneLayer.h  UI.cpp  UI.h
Pyxis/src/Pyxis/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Pyxis/src/Pyxis/Network/: Network.cpp  Network.h  NetworkClient.cpp  NetworkClient.h  NetworkCommon.cpp  NetworkCommon.h  NetworkConnection.cpp  NetworkConnection.h  NetworkMessage.h  NetworkServer.cpp  NetworkServer.h  NetworkThreadSafeQueue.cpp  NetworkThreadSafeQueue.h  SteamNetworkClient.h  SteamNetworkServer.cpp  SteamNetworkServer.h
Pyxis/src/Pyxis/Nodes/: B2BodyNode.cpp  B2BodyNode.h  CameraNode.cpp  CameraNode.h  ChainBody2D.h  Node.cpp  Node.h  Node2D.h  Node3D.cpp  Node3D.h  OrthographicCameraControllerNode.h  OrthographicCameraNode.cpp  OrthographicCameraNode.h  PhysicsBodyNode2D.cpp  PhysicsBodyNode2D.h  PixelCameraNode.cpp  PixelCameraNode.h  PointLightNode2D.h  RigidBody2D.cpp  RigidBody2D.h  ShadowCaster2DNode.h  UI.h  UIButton.h  UICanvas.h  UIContainer.h  UINode.h  UIRect.h  UIScreenSpace.h  UISignalButton.h  UIText.h  UITextButton.h
Pyxis/src/Pyxis/Nodes/UI/: Button.h  Canvas.h  Container.h  HorizontalContainer.h  InputBase.h  InputFloat.h  InputInt.h  InputText.h  ScreenSpace.h  SignalButton.h  Text.h  TextButton.h  UI.h  UINode.h  UIRect.h
Pyxis/src/Pyxis/Renderer/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Font.cpp  Font.h  FrameBuffer.cpp  FrameBuffer.h  GraphicsContext.h  Material.h  PixelRenderer2D.cpp  PixelRenderer2D.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  UI.h  UIButton.h  UICanvas.h  UIContainer.h  UINode.h  UIRect.h  UIText.h  VertexArray.cpp  VertexArray.h
Pyxis/src/Pyxis/UI/: UILayer.cpp  UILayer.h
(+85 files in other folders)
